Fix spacing of nav and home page

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,7 +7,7 @@
 
 .row.no-gutter {
   margin-left: 0;
-  margin-right: 0;
+  margin-right: -15px;
 }
 
 .row.no-gutter [class*='col-'],
